--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="bootstrap" version="3.3.7" />
   <package id="jQuery" version="3.1.1" />
+  <package id="toastr" version="2.1.1" />
 </packages>
